--- a/ticketnavplugin/trunk/ticketnav/htdocs/css/ticket_descr.css
+++ b/ticketnavplugin/trunk/ticketnav/htdocs/css/ticket_descr.css
@@ -1,15 +1,44 @@
-#properties table tbody tr th div.ticket-rndescr {
- background: #fdc;
- border: 2px solid #d00;
- color: #500;
+
+#properties div.ticket-descr {
+ white-space: normal;
+ width: 95%;
+ height: 255px;
+ overflow: auto;
+ text-align: left;
+ font-size: 0.9em;
  padding: .5em;
- margin: 1em 0;
+ margin: 1em 0 1em 0;
+ border-radius: .4em;
+ border-style: solid;
+ border-width: 1px;
+ box-shadow: 0.1em .1em 0.5em 0 #555;
+
+ border-color: #00d;
+ background: #eef;
+ color: #005;
 }
 
-#properties table tbody tr th div.ticket-descr {
- background: #eef;
- border: 2px solid #00d;
- color: #005;
- padding: .5em;
- margin: 1em 0;
+#properties div.rnrelevant {
+ background: #fdc;
+ color: #500;
+ border-color: #d00;
+}
+
+#properties div.ticket-descr h1{
+ font-size:1.4em;
+ margin: 0 0 0.5em 0;
+}
+
+#properties div.ticket-descr div{
+ font-size:1em;
+ margin: 0 0 0.5em 0;
+}
+
+#properties div.ticket-descr ul{
+ padding-left: 1.5em;
+ margin: 0 0 0.5em 0;
+}
+
+#properties div.ticket-descr p.rntag{
+ font-style: italic;
 }
