--- a/trachtmlnotificationplugin/0.12/trachtmlnotification/templates/htmlnotification_ticket.html
+++ b/trachtmlnotificationplugin/0.12/trachtmlnotification/templates/htmlnotification_ticket.html
@@ -9,33 +9,39 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <base href="${abs_href.ticket(ticket.id)}" />
     <title>#${ticket.id} (${ticket.summary})</title>
+    <style type="text/css">${Markup(styles)}</style>
   </head>
   <body>
-    <h1 id="trac-ticket-title">
-      <a href="${abs_href.ticket(ticket.id)}">Ticket #${ticket.id}</a>
-      <span class="status">(${ticket.status}<py:if
-          test="ticket.type"> ${ticket.type}</py:if><py:if
-          test="ticket.resolution">: ${ticket.resolution}</py:if>)</span>
-    </h1>
-    <hr />
-    <xi:include href="ticket_box.html" />
-    <py:for each="change in changes">
-      <hr />
-      <h3><a href="${ticket.link}">${_('Comment (by %(author)s):', author=change.author)}</a></h3>
-      <div id="changelog">
-        <xi:include href="ticket_change.html"/>
+    <div id="main">
+      <div id="content" class="ticket">
+        <h1 id="trac-ticket-title">
+          <a href="${abs_href.ticket(ticket.id)}">Ticket #${ticket.id}</a>
+          <span class="status">(${ticket.status}<py:if
+              test="ticket.type"> ${ticket.type}</py:if><py:if
+              test="ticket.resolution">: ${ticket.resolution}</py:if>)</span>
+        </h1>
+        <hr />
+        <xi:include href="ticket_box.html" />
+        <py:for each="change in changes">
+          <hr />
+          <h3><a href="${ticket.link}">${_('Comment (by %(author)s):', author=change.author)}</a></h3>
+          <div id="changelog">
+            <xi:include href="ticket_change.html"/>
+          </div>
+        </py:for>
+        <py:if test="alist and alist.attachments">
+          <hr />
+          <xi:include href="list_of_attachments.html" py:with="foldable = False"/>
+        </py:if>
       </div>
-    </py:for>
-    <py:if test="attachments and attachments.attachments">
+    </div>
+    <div id="footer">
       <hr />
-      <xi:include href="list_of_attachments.html"
-                  py:with="alist = attachments; foldable = False"/>
-    </py:if>
-    <hr />
-    <p>
-      ${tag_('Ticket URL: \x3c%(link)s\x3e', link=link)}<br />
-      $project.name &lt;<a href="${project.url or abs_href()}">${project.url or abs_href()}</a>&gt;<br />
-      $project.descr
-    </p>
+      <p>
+        ${tag_('Ticket URL: \x3c%(link)s\x3e', link=link)}<br />
+        $project.name &lt;<a href="${project.url or abs_href()}">${project.url or abs_href()}</a>&gt;<br />
+        $project.descr
+      </p>
+    </div>
   </body>
 </html>
