T1RA 1   * Added Translation support (L10N support using babel/trac 0.12+ translation api)   * Cleaned out globber expressions in setup.py, simply add by package_data spec   * Added Translation guide (file: TRANSLATION)   * Added first pot and a Catalog for de_DE  (for testing)   * Added setup.cfg and part of setup.py for message extraction/catalog handling according to the l10n cookbook
git-svn-id: http://trac-hacks.org/svn@13299 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/projectplanplugin/0.11/branches/t1ra/projectplan/templates/admin_ppconf.html
+++ b/projectplanplugin/0.11/branches/t1ra/projectplan/templates/admin_ppconf.html
@@ -3,10 +3,11 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:xi="http://www.w3.org/2001/XInclude"
-      xmlns:py="http://genshi.edgewall.org/">
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:i18n="http://genshi.edgewall.org/i18n" i18n:domain="projectplanplugin">
   <xi:include href="admin.html" />
   <head>
-    <title>ProjectPlan ${page} Configuration</title>
+    <title i18n:msg="page">ProjectPlan ${page} Configuration</title>
   </head>
 
   <body>
