Fixes #11180: Create milestones from the Versions page.
 * When `roadmap_navigation = true` and the user has `MILESTONE_CREATE` permission, an //Add new milestone// button is displayed on the Versions page.
 * The //Add new milestone// and //Add new version// buttons have been made translatable.

git-svn-id: http://trac-hacks.org/svn@13309 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/extendedversionplugin/trunk/extendedversion/templates/versions.html
+++ b/extendedversionplugin/trunk/extendedversion/templates/versions.html
@@ -54,12 +54,22 @@
         </li>
       </ul>
 
-      <div py:if="'VERSION_CREATE' in perm" class="buttons">
-       <form method="get" action="${href.version()}"><div>
-        <input type="hidden" name="action" value="new" />
-        <input type="submit" value="Add new version" />
-       </div></form>
-      </div>
+
+      <py:with vars="version_create = 'VERSION_CREATE' in perm;
+                     milestone_create = roadmap_navigation and 'MILESTONE_CREATE' in perm;">
+        <div py:if="milestone_create or version_create" class="buttons">
+          <form py:if="version_create" method="get"
+                action="${href.version()}"><div>
+            <input type="hidden" name="action" value="new" />
+            <input type="submit" value="${_('Add new version')}" />
+          </div></form>
+          <form py:if="milestone_create" method="get"
+                action="${href.milestone()}"><div>
+            <input type="hidden" name="action" value="new" />
+            <input type="submit" value="${_('Add new milestone')}" />
+          </div></form>
+        </div>
+      </py:with>
 
       <div id="help"><strong>Note:</strong> See
         <a href="${href.wiki('TracRoadmap')}">TracRoadmap</a> for help on using
