--- a/fieldtooltipplugin/0.12/fieldtooltip/htdocs/jquerytooltip/jquery.tooltip.css
+++ b/fieldtooltipplugin/0.12/fieldtooltip/htdocs/jquerytooltip/jquery.tooltip.css
@@ -1,13 +1,11 @@
-.tooltip {
+#tooltip {
+	position: absolute;
 	background: #ffff99;
 	padding: 3px;
 	word-wrap: break-word;
 	width: 400px;
 	text-align: left;
-	color: #663;
 }
-.tooltip p {
+#tooltip p {
 	margin: 0;
-	color: black;
-	font-size: 120%;
 }
