tracworkflowadmin: "All users" is selected in `permissions` by default
git-svn-id: http://trac-hacks.org/svn@13363 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracworkflowadminplugin/0.12/tracworkflowadmin/templates/tracworkflowadmin.html
+++ b/tracworkflowadminplugin/0.12/tracworkflowadmin/templates/tracworkflowadmin.html
@@ -90,8 +90,9 @@
               </select>
             </td>
             <td class="col-permissions selectable">
-              <select multiple="multiple">
-                <option py:for="perm in perms">${perm}</option>
+              <select multiple="multiple"><!--! first item is "All users" -->
+                <option py:for="idx, perm in enumerate(perms)"
+                        selected="${idx == 0 and 'selected' or None}">${perm}</option>
               </select>
             </td>
             <td class="col-next-status selectable">
