TracLinksPlugin: add highlight to browser preview, browser dirlist
git-svn-id: http://trac-hacks.org/svn@13366 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/traclinksplugin/0.12/traclinks/htdocs/css/anchoranywhere.css
+++ b/traclinksplugin/0.12/traclinks/htdocs/css/anchoranywhere.css
@@ -6,7 +6,7 @@ p:hover .anchor, li:hover .anchor {
 	position: absolute;
 }
 
-p:target, li:target {
+p:target, li:target, th:target ~ td, td:target {
  background: #ffb;
  box-shadow: .1em .1em .4em .1em #DDA;
  border-radius: .2em;
