Changed bar title attribute to prefix the number of tickets. Fixes #11313.
git-svn-id: http://trac-hacks.org/svn@13399 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/tracticketstatsplugin/trunk/ticketstats/templates/ticketstats_macro.html
+++ b/tracticketstatsplugin/trunk/ticketstats/templates/ticketstats_macro.html
@@ -50,9 +50,7 @@
 
         YAHOO.example.getDataTipText_$id = function( item, index, series )
         {
-          var toolTipText = series.displayName + " for " + item.date;
-          toolTipText += "\\n" + item[series.yField] ;
-          return toolTipText;
+          return item[series.yField] + " " + series.displayName + " for " + item.date;
         }
 
         var mychart_$id = new YAHOO.widget.ColumnChart( "chart_$id", myDataSource_$id,
@@ -85,9 +83,7 @@
 
         YAHOO.example.getDataTipText_$id = function( item, index, series )
         {
-          var toolTipText = series.displayName + " for " + item.date;
-          toolTipText += "\\n" + item[series.yField] ;
-          return toolTipText;
+          return item[series.yField] + " " + series.displayName + " for " + item.date;
         }
 
         var mychart_$id = new YAHOO.widget.ColumnChart( "chart_$id", myDataSource_$id,
