Center the new hack form on the page, and move the `h1` outside the form so that it is left-aligned with the other content. Refs #10193.

--- a/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
+++ b/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
@@ -1,7 +1,9 @@
 .tagcloud li:after { content: " "; }
 .tagcloud li.last:after { content: ""; }
 
-.newhack {
+#content.newhack {
+  margin-left: auto;
+  margin-right: auto;
   width: 640px;
 }
 
