--- a/trachacksplugin/0.11/trachacks/templates/hacks_new.html
+++ b/trachacksplugin/0.11/trachacks/templates/hacks_new.html
@@ -19,189 +19,192 @@
         ${page_preview}
       </div>
     </fieldset>
-    <form id="content" class="newhack wikipage" method="post">
+    <div id="content" class="newhack">
+
       <h1>Create a new "hack" on Trac-Hacks</h1>
 
-      <fieldset id="basics">
-        <legend>Basic Information</legend>
-        <dl>
-          <dt><label for="name">Name of hack</label></dt>
-          <dd>
-            <div>
-              A <a href="http://trac.edgewall.org/wiki/CamelCase">
-              CamelCase</a> name for your hack.
-            </div>
-
-            <div id="namehint" class="hint" style="display:none">
-              <span class="hint-pointer">&nbsp;</span>
-              <p>
-                A new Wiki page will be created by concatenating the hack name
-                with the <a href="#type">hack type</a> you select below.
-              </p>
-              <p>
-                <strong>eg.</strong>
-                If you enter <tt>TracHacks</tt> as the name then select
-                <tt>plugin</tt> as the hack type, the resulting page name will
-                be <tt>TracHacksPlugin</tt>.
-              </p>
-            </div>
-
-            <input tabindex="1" type="text" size="40" name="name" id="name"
-              value="${name}"/>
-          </dd>
-
-          <!-- Title -->
-          <dt><label for="title">Title</label></dt>
-          <dd>
-            <div>
-              Descriptive title for your hack.
-              You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here.
-            </div>
-
-            <div id="titlehint" class="hint" style="display:none">
-              <span class="hint-pointer">&nbsp;</span>
-              <p>
-                This will be the main heading in the Wiki page for your hack.
-                It will also be displayed in the hack listing, so <em>make it
-                descriptive</em>.
-              </p>
-            </div>
-
-            <input tabindex="2" type="text" size="80" name="title" id="title"
-              value="${title}"/>
-          </dd>
-
-          <!-- Description -->
-          <dt><label for="description">Description</label></dt>
-          <dd>
-            <div>
-              A full description of your hack.
-              You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here.
-            </div>
-
-            <div id="descriptionhint" class="hint" style="display:none">
-              <span class="hint-pointer">&nbsp;</span>
-              <p>
-                This is what visitors will read to determine if your hack
-                meets their needs.
-              </p>
-            </div>
-
-            <textarea tabindex="3" name="description" id="description"
-              cols="80" rows="10" class="wikitext">${description}</textarea>
-          </dd>
-
-        </dl>
-      </fieldset>
-
-      <fieldset id="classification">
-        <legend>Classification</legend>
+      <form method="post">
+        <fieldset id="basics">
+          <legend>Basic Information</legend>
           <dl>
-            <!-- Type -->
-            <dt>Type</dt>
-            <dd id="type">
+            <dt><label for="name">Name of hack</label></dt>
+            <dd>
               <div>
-                The type that best describes your hack.
+                A <a href="http://trac.edgewall.org/wiki/CamelCase">
+                CamelCase</a> name for your hack.
               </div>
 
-              <div id="typehint" class="hint" style="display:none">
+              <div id="namehint" class="hint" style="display:none">
+                <span class="hint-pointer">&nbsp;</span>
                 <p>
-                  The title-cased version of the type will be appended to your
-                  hack name to create your Wiki page.
+                  A new Wiki page will be created by concatenating the hack name
+                  with the <a href="#type">hack type</a> you select below.
+                </p>
+                <p>
+                  <strong>e.g.</strong>
+                  If you enter <tt>TracHacks</tt> as the name then select
+                  <tt>plugin</tt> as the hack type, the resulting page name will
+                  be <tt>TracHacksPlugin</tt>.
                 </p>
               </div>
 
-              <py:for each="t,d in types">
-                <input tabindex="4" checked="${t == type or None}" type="radio" value="${t}"
-                  id="${t}" name="type"/>
-                <nobr>
-                  <label for="${t}">
-                    <a href="${href.wiki(t)}">${t}</a>
-                    <span style="font-size:xx-small;">(${d})</span>
-                  </label>
-                </nobr>
-                <br />
-              </py:for>
+              <input tabindex="1" type="text" size="40" name="name" id="name"
+                value="${name}"/>
             </dd>
 
-            <!-- Compatibility -->
-            <dt>Compatibility</dt>
-            <dd id="release">
-              <div>Release(s) of Trac this hack works with.</div>
+            <!-- Title -->
+            <dt><label for="title">Title</label></dt>
+            <dd>
+              <div>
+                Descriptive title for your hack.
+                You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here.
+              </div>
 
-              <div id="releasehint" class="hint" style="display:none">
+              <div id="titlehint" class="hint" style="display:none">
+                <span class="hint-pointer">&nbsp;</span>
                 <p>
-                  <strong>anyrelease</strong> indicates your hack will work
-                  with any Trac release.
+                  This will be the main heading in the Wiki page for your hack.
+                  It will also be displayed in the hack listing, so <em>make it
+                  descriptive</em>.
                 </p>
               </div>
 
-              <py:for each="r in releases">
-                <input tabindex="5" type="checkbox" name="release" value="${r}"
-                  id="${r}" checked="${r in release or None}"/>
-                <label for="${r}">
-                  <a href="${href.wiki(r)}">${r}</a>
-                </label>
-              </py:for>
+              <input tabindex="2" type="text" size="80" name="title" id="title"
+                value="${title}"/>
+            </dd>
+
+            <!-- Description -->
+            <dt><label for="description">Description</label></dt>
+            <dd>
+              <div>
+                A full description of your hack.
+                You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here.
+              </div>
+
+              <div id="descriptionhint" class="hint" style="display:none">
+                <span class="hint-pointer">&nbsp;</span>
+                <p>
+                  This is what visitors will read to determine if your hack
+                  meets their needs.
+                </p>
+              </div>
+
+              <textarea tabindex="3" name="description" id="description"
+                cols="80" rows="10" class="wikitext">${description}</textarea>
+            </dd>
+
+          </dl>
+        </fieldset>
+
+        <fieldset id="classification">
+          <legend>Classification</legend>
+            <dl>
+              <!-- Type -->
+              <dt>Type</dt>
+              <dd id="type">
+                <div>
+                  The type that best describes your hack.
+                </div>
+
+                <div id="typehint" class="hint" style="display:none">
+                  <p>
+                    The title-cased version of the type will be appended to your
+                    hack name to create your Wiki page.
+                  </p>
+                </div>
+
+                <py:for each="t,d in types">
+                  <input tabindex="4" checked="${t == type or None}" type="radio" value="${t}"
+                    id="${t}" name="type"/>
+                  <nobr>
+                    <label for="${t}">
+                      <a href="${href.wiki(t)}">${t}</a>
+                      <span style="font-size:xx-small;">(${d})</span>
+                    </label>
+                  </nobr>
+                  <br />
+                </py:for>
+              </dd>
+
+              <!-- Compatibility -->
+              <dt>Compatibility</dt>
+              <dd id="release">
+                <div>Release(s) of Trac this hack works with.</div>
+
+                <div id="releasehint" class="hint" style="display:none">
+                  <p>
+                    <strong>anyrelease</strong> indicates your hack will work
+                    with any Trac release.
+                  </p>
+                </div>
+
+                <py:for each="r in releases">
+                  <input tabindex="5" type="checkbox" name="release" value="${r}"
+                    id="${r}" checked="${r in release or None}"/>
+                  <label for="${r}">
+                    <a href="${href.wiki(r)}">${r}</a>
+                  </label>
+                </py:for>
+              </dd>
+            </dl>
+        </fieldset>
+
+        <fieldset id="extra">
+          <legend>Optional Extras</legend>
+          <dl>
+            <dt><label for="installation">Installation instructions</label></dt>
+            <dd>
+              <div>
+                Describe how to install your hack.
+              (You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here)
+              </div>
+
+              <div id="installationhint" class="hint" style="display:none">
+                <p>
+                  Please include full instructions on how to install your hack,
+                  including changes that need to be made to the <a
+                  href="http://trac.edgewall.org/wiki/TracIni">trac.ini</a>
+                  file, in particular the
+                  <a href="http://trac.edgewall.org/wiki/TracIni#components-section">[components]</a>
+                  section.
+                </p>
+              </div>
+
+              <textarea tabindex="6" name="installation" id="installation"
+                cols="80" rows="10" class="wikitext">${installation}</textarea>
+            </dd>
+
+            <dt><label for="tags">Tags</label></dt>
+            <dd>
+              <div>
+                Space-separated list of tags classifying your hack.
+              </div>
+              <div id="tagshint" class="hint" style="display:none">
+                <p>
+                  Use any words you like. The more tags you use the easier it will
+                  be for people to find your hack.
+                </p>
+                <p>
+                  The tag cloud shows the top-25 tags plus some more, to give you an idea.
+                  You can also click on any of these tags to toggle them for your hack.
+                </p>
+              </div>
+
+              <input tabindex="7" type="text" size="80" id="tags" name="tags" value="${tags}"/>
+
+              <div id="cloud">
+                <p>These are some of the tags used by other hacks:</p>
+                ${cloud}
+              </div>
             </dd>
           </dl>
-      </fieldset>
+        </fieldset>
 
-      <fieldset id="extra">
-        <legend>Optional Extras</legend>
-        <dl>
-          <dt><label for="installation">Installation instructions</label></dt>
-          <dd>
-            <div>
-              Describe how to install your hack.
-            (You may use <a href="${href.wiki('WikiFormatting')}">WikiFormatting</a> here)
-            </div>
-
-            <div id="installationhint" class="hint" style="display:none">
-              <p>
-                Please include full instructions on how to install your hack,
-                including changes that need to be made to the <a
-                href="http://trac.edgewall.org/wiki/TracIni">trac.ini</a> 
-                file, in particular the
-                <a href="http://trac.edgewall.org/wiki/TracIni#components-section">[components]</a>
-                section.
-              </p>
-            </div>
-
-            <textarea tabindex="6" name="installation" id="installation"
-              cols="80" rows="10" class="wikitext">${installation}</textarea>
-          </dd>
-
-          <dt><label for="tags">Tags</label></dt>
-          <dd>
-            <div>
-              Space-separated list of tags classifying your hack.
-            </div>
-            <div id="tagshint" class="hint" style="display:none">
-              <p>
-                Use any words you like. The more tags you use the easier it will
-                be for people to find your hack.
-              </p>
-              <p>
-                The tag cloud shows the top-25 tags plus some more, to give you an idea.
-                You can also click on any of these tags to toggle them for your hack.
-              </p>
-            </div>
-
-            <input tabindex="7" type="text" size="80" id="tags" name="tags" value="${tags}"/>
-
-            <div id="cloud">
-              <p>These are some of the tags used by other hacks:</p>
-              ${cloud}
-            </div>
-          </dd>
-        </dl>
-      </fieldset>
-
-      <input tabindex="8" type="submit" name="preview" value="Preview"/>
-      <input tabindex="9"
-        disabled="${(form_context.errors or not (preview or create)) or None}"
-        type="submit" name="create" value="Create Hack"/>
-    </form>
+        <input tabindex="8" type="submit" name="preview" value="Preview"/>
+        <input tabindex="9"
+          disabled="${(form_context.errors or not (preview or create)) or None}"
+          type="submit" name="create" value="Create Hack"/>
+      </form>
+    </div>
   </body>
 </html>
