Removed unused parameter from request arguments.
git-svn-id: http://trac-hacks.org/svn@13444 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/discussionplugin/0.11/tracdiscussion/templates/admin-forum-list.html
+++ b/discussionplugin/0.11/tracdiscussion/templates/admin-forum-list.html
@@ -232,8 +232,8 @@
             </tbody>
           </table>
           <div class="buttons">
-            <input type="submit" name="remove" value="Remove selected items" />
-            <input type="hidden" name="discussion_action" value="delete"/>
+            <input type="submit" value="Remove selected items" />
+            <input type="hidden" name="discussion_action" value="delete" />
           </div>
         </form>
         <div py:otherwise="">
