--- a/dropbearsplugin/0.11/dropbears/templates/prefs_dropbears.html
+++ b/dropbearsplugin/0.11/dropbears/templates/prefs_dropbears.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="field">
-      <input type="text" name="dropbears" value="$dropbears" />
+      <input type="text" id="dropbears" name="dropbears" value="$dropbears" />
       <label for="dropbears">
         Number of dropbears
       </label>
@@ -20,7 +20,7 @@
     </div>
     
     <div class="field">
-      <input type="checkbox" name="dropbears_physics" value="1" checked="$dropbears_physics" />
+      <input type="checkbox" id="dropbears_physics" name="dropbears_physics" value="1" checked="$dropbears_physics" />
       <label for="dropbears_physics">
         Enable physics
       </label>
