started 2 new features:  - close of projects (see #11377)  - user restriction for projects (see #11367)
implemented
 * admin GUI
 * db extension
 * upgrade from plugin version 4 to 5 (two new fields 'restrict' (integer) and 'closed' (text) to table 'smp_project')

git-svn-id: http://trac-hacks.org/svn@13474 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/simplemultiprojectplugin/trunk/simplemultiproject/templates/simplemultiproject_adminpanel.html
+++ b/simplemultiprojectplugin/trunk/simplemultiproject/templates/simplemultiproject_adminpanel.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:py="http://genshi.edgewall.org/">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:i18n="http://genshi.edgewall.org/i18n"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
     <xi:include href="admin.html" />
     <head>
         <title>Manage Projects</title>
+        <script type="text/javascript">/*<![CDATA[*/
+          jQuery(document).ready(function($) {
+            function updateDueDate() {
+              $("#projectcloseddate").enable($("#closed").checked());
+            }        
+            $("#closed").click(updateDueDate);        
+            updateDueDate();
+            $("#name").get(0).focus()
+          });
+        /*]]>*/</script>
     </head>
     <body>
         <h2>Manage Projects</h2>
@@ -23,6 +36,23 @@
                     <div class="field">
                         <label>Description:<br />
                             <textarea cols="60" rows="10" class="wikitext trac-resizable"  name="description">${project.description}</textarea>
+                        </label>
+                    </div>
+                    <div class="field">
+                        <label>Restricted To Users:<br />
+                            <textarea cols="60" rows="2" class="wikitext trac-resizable"  name="restrict">${project.restrict}</textarea>
+                        </label>
+                    </div>
+                    <div class="field">
+                        <label>
+                          <input type="checkbox" id="closed" name="closed" checked="${project.closed or None}" />
+                          Closed:<br />
+                        </label>
+                        <label>
+                          <input type="text" id="projectcloseddate" name="time" size="${len(datetime_hint)}"
+                                 value="${format_datetime(project.closed)}"
+                                 title="${_('Format: %(datehint)s', datehint=datetime_hint)}" />
+                          <em i18n:msg="datehint">Format: ${datetime_hint}</em>
                         </label>
                     </div>
                     <input type="hidden" name="id" value="${project.id}"/>
@@ -51,6 +81,11 @@
                                 <textarea cols="48" rows="5" class="wikitext trac-resizable"  name="description"></textarea>
                             </label>
                         </div>
+                        <div class="field">
+                            <label>Restricted To Users:<br />
+                                <textarea cols="48" rows="2" class="wikitext trac-resizable"  name="restrict"></textarea>
+                            </label>
+                        </div>
                         <div class="buttons">
                             <input type="submit" name="add" value="Add" />
                         </div>
@@ -64,6 +99,8 @@
                                     <th class="sel">&nbsp;</th>
                                     <th>Name</th>
                                     <th>Summary</th>
+                                    <th>Restricted To Users</th>
+                                    <th>Closed</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -71,6 +108,8 @@
                                     <td><input type="checkbox" name="sel" value="$project.id" /></td>
                                     <td><a href="${href.admin('projects','simplemultiproject')}/${project.id}" method="post">${project.name}</a></td>
                                     <td>${project.summary}</td>
+                                    <td>${project.restrict}</td>
+                                    <td>${project.closed or None}</td>
                                 </tr>
                             </tbody>
                         </table>
