--- a/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
+++ b/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
@@ -1,77 +1,94 @@
 .tagcloud li:after { content: " "; }
 .tagcloud li.last:after { content: ""; }
 
-.newhack {
-  width: 640px;
+#content.newhack {
+ margin: 0 auto 2em 40px;
+ width: 640px;
 }
 
 .newhack input[type="text"] {
-  width: 90%;
-  padding: 2px;
-  margin: 0.1em 0em;
+ box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ width: 100%;
+ *width: 90%;
+ padding: 2px;
+ margin: 0.1em 0em;
 }
 
 .newhack textarea {
-  width: 90%;
-  padding: 4px;
-  margin: 0.1em 0em;
+ box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ width: 100%;
+ *width: 90%;
+ padding: 4px;
+ margin: 0.1em 0em;
+}
+
+.newhack fieldset {
+ padding: 1em 0;
+}
+
+.newhack fieldset dl {
+ padding: 0 1em;
 }
 
 .newhack dt {
-  font-weight: bold;
+ font-weight: bold;
 }
 
 .newhack dd {
-  margin: 1em;
-  margin-top: 0em;
+ margin: 0 1em 1em;
 }
 
 /* TODO pointer.gif XXX XXX XXX */
 .newhack .hint {
-  font-size: xx-small;
-  position: absolute;
-  right: -42ex;
-  width: 200px;
-  background: #b0ffb0;
-  border: 1px solid #40e040;
-  margin: 0em;
-  padding: 0.2em 1em;
+ font-size: xx-small;
+ position: absolute;
+ right: -42ex;
+ width: 200px;
+ background: #b0ffb0;
+ border: 1px solid #40e040;
+ margin: 0em;
+ padding: 0.2em 1em;
 }
 
 .newhack div.error {
-  background: #ffb0b0;
-  border: 1px solid #e04040;
-  width: 90%;
-  text-align: center;
-  margin: 0.2em 0em;
-  padding: 2px;
-  font-weight: bold;
+ background: #ffb0b0;
+ border: 1px solid #e04040;
+ box-sizing: border-box;
+ -moz-box-sizing: border-box;
+ width: 100%;
+ *width: 90%;
+ text-align: center;
+ margin: 0.2em 0em;
+ padding: 2px;
+ font-weight: bold;
 }
 
 .newhack .hint .hint-pointer {
-    position: absolute;
-    left: -10px;
-    top: 5px;
-    width: 10px;
-    height: 19px;
-    background: url(../pointer.gif) left top no-repeat;
+ position: absolute;
+ left: -10px;
+ top: 5px;
+ width: 10px;
+ height: 19px;
+ background: url(../pointer.gif) left top no-repeat;
 }
 
 .newhack #cloud {
-  margin: 1em;
-  text-align: center;
-  width: 80%;
+ margin: 1em;
+ text-align: center;
+ width: 80%;
 }
 
 #preview {
-  -moz-background-clip:border;
-  -moz-background-inline-policy:continuous;
-  -moz-background-origin:padding;
-  background:#F4F4F4 url(/chrome/common/draft.png) repeat scroll 0 0;
-  margin:1em 0 2em;
-  overflow:auto;
+ -moz-background-clip: border;
+ -moz-background-inline-policy: continuous;
+ -moz-background-origin: padding;
+ background: #F4F4F4 url(/chrome/common/draft.png) repeat scroll 0 0;
+ margin: 1em 0 2em;
+ overflow: auto;
 }
 
 .hacktypesmacro p, .tracreleasesmacro p {
-  margin-top: 0;
+ margin-top: 0;
 }
