Use `path_links.html` template from Trac. Refs #7034.
git-svn-id: http://trac-hacks.org/svn@13500 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/peerreviewplugin/trunk/codereview/templates/peerReviewBrowser.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewBrowser.html
@@ -18,7 +18,7 @@
 </py:def>
 
 <div id="content" class="browser">
-  <h2>${browser_path_links(path_links, stickyrev)}</h2>
+  <h2><xi:include href="path_links.html" /></h2>
 
       <div id="jumprev">
           <div>
