--- a/peerreviewplugin/trunk/codereview/templates/peerReviewNew.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewNew.html
@@ -9,10 +9,10 @@
 
   <head>
     <title>Create Code Review</title>
-    <style>
+    <style type="text/css">
       <!--
       table.code th.addFileNums { width: 4em; }
-      //-->
+      -->
     </style>
   </head>
 
