--- a/peerreviewplugin/trunk/codereview/templates/peerReviewPerform.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewPerform.html
@@ -7,8 +7,9 @@
   <xi:include href="layout.html" />
   <xi:include href="macros.html" />
 
-<head>
-</head>
+  <head>
+    <title>Code Review</title>
+  </head>
 
 <body>
   <!-- Top Navigation Bar -->
