--- a/peerreviewplugin/trunk/codereview/templates/peerReviewOptions.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewOptions.html
@@ -8,8 +8,7 @@
   <xi:include href="macros.html" />
 
   <head>
-  <link rel="stylesheet" href="/trac-mysql/chrome/common/css/code.css" type="text/css" media="screen, projector, print" />
-  <link rel="stylesheet" href="/trac-mysql/chrome/common/css/browser.css" type="text/css" media="screen, projector, print" />
+    <title>Code Review Options</title>
   </head>
 
   <body>
