--- a/peerreviewplugin/trunk/codereview/templates/peerReviewSearch.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewSearch.html
@@ -8,8 +8,7 @@
   <xi:include href="macros.html" />
 
   <head>
-  <link rel="stylesheet" href="${href.chrome('common/css/code.css')}" type="text/css" media="screen, projector, print" />
-  <link rel="stylesheet" href="${href.chrome('common/css/browser.css')}" type="text/css" media="screen, projector, print" />
+    <title>Search Code Reviews</title>
   </head>
 
   <body>
