--- a/peerreviewplugin/trunk/codereview/templates/peerReviewView.html
+++ b/peerreviewplugin/trunk/codereview/templates/peerReviewView.html
@@ -7,10 +7,9 @@
   <xi:include href="layout.html" />
   <xi:include href="macros.html" />
 
-<head>
-  <link rel="stylesheet" href="/trac-mysql/chrome/common/css/code.css" type="text/css" media="screen, projector, print" />
-  <link rel="stylesheet" href="/trac-mysql/chrome/common/css/browser.css" type="text/css" media="screen, projector, print" />
-</head>
+  <head>
+    <title>Code Review</title>
+  </head>
 
 <body>
   <!-- Top Navigation Bar -->
