ThemeEnginePlugin : Replace jcarousellite.js with cycle2 {fixes #11243}
Version = 2.2.2


git-svn-id: http://trac-hacks.org/svn@13506 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/themeengine/htdocs/admin.css
+++ b/themeengineplugin/trunk/themeengine/htdocs/admin.css
@@ -41,6 +41,7 @@
 }
 
 #themebuttons {
+  margin: 4px auto;
   text-align: center;
   width: 420px;
 }
@@ -75,3 +76,8 @@
   height: 195px !important;
   height: 195px;
 }
+
+.pull-right {
+  float: right;
+}
+
