--- a/themeengineplugin/trunk/themeengine/templates/admin_theme.html
+++ b/themeengineplugin/trunk/themeengine/templates/admin_theme.html
@@ -18,8 +18,15 @@
   
     <form method="post">
       <div id="themelistdiv">
-        <ul id="themelist">
-          <li py:for="name, theme in themeengine.info">
+        <ul id="themelist" class="cycle-slideshow" data-cycle-fx="fade"
+            data-cycle-prev="#prevbutton" data-cycle-next="#nextbutton"
+            data-cycle-timeout="0" data-cycle-slides="&gt; li"
+            data-starting-slide="${themeengine.current_index}"
+            data-cycle-overlay-template="&lt;p&gt; &lt;strong&gt;{{title}}&lt;/strong&gt; &lt;span class=&quot;pull-right&quot;&gt;({{slideNum}} / {{slideCount}})&lt;/span&gt; &lt;/p&gt;&lt;p&gt;&lt;small&gt;{{desc}}&lt;/small&gt;&lt;/p&gt;">
+          <div class="cycle-overlay"></div>
+          <li py:for="name, theme in themeengine.info"
+              data-title="${theme.name.islower() and theme.name.title() or theme.name}"
+              data-cycle-desc="${theme.description}">
             <p>
               <input type="radio" id="theme_${name}_radio" name="theme" value="$name" checked="${themeengine.current == name or None}" />
               <label for="theme_${name}_radio" class="themename">${theme.name.islower() and theme.name.title() or theme.name}</label>
@@ -35,9 +42,7 @@
       <div id="themebuttons">
         <img src="${href.chrome('themeengine', 'img', 'next.gif')}" border="0" id="nextbutton" />
         <img src="${href.chrome('themeengine', 'img', 'prev.gif')}" border="0" id="prevbutton" />
-        <div id="themename">$themeengine.current</div>
-        <div id="themedesc">${themeengine.current_theme and themeengine.current_theme.description or 'Theme not found'}</div>
-        <input type="submit" value="Use this theme" />
+        <input type="submit" value="Use this theme" class="${'btn' if bhdb else None}"/>
       </div>
     </form>
   
@@ -47,20 +52,10 @@
         $('#themelist .themename').hide();
         $('#nextbutton, #prevbutton, #themename, #themedesc ').show();
         $('#themebuttons').append('<input type="hidden" id="themehidden" name="theme" value="$themeengine.current" />');
-        $('#themelistdiv').jCarouselLite({
-            btnNext: '#nextbutton',
-            btnPrev: '#prevbutton',
-            visible: 1,
-            start: $themeengine.current_index,
-            circular: true,
-            afterEnd: function(elm) {
-              console.log(elm);
-              var value = elm.find('label.themename').text();
-              $('#themename').text(value);
-              $('#themedesc').text(elm.find('img').attr('alt'));
-              $('#themehidden').val(value);
-            }
-        });
+        $('#themelist').on('cycle-after', function( e, opts, old, elm ) {
+          var value = $(elm).find('label.themename').text();
+          $('#themehidden').val(value);
+        })
       });
     </script>
   </body>
