Fixed invalid value for `-moz-background-clip` property. Refs #11436.
git-svn-id: http://trac-hacks.org/svn@13508 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
+++ b/trachacksplugin/0.11/trachacks/htdocs/css/trachacks.css
@@ -81,7 +81,7 @@
 }
 
 #preview {
- -moz-background-clip: border;
+ -moz-background-clip: border-box;
  -moz-background-inline-policy: continuous;
  -moz-background-origin: padding;
  background: #F4F4F4 url(/chrome/common/draft.png) repeat scroll 0 0;
