ThemeEnginePlugin [ close #6892 ] : Handle in customize theme admin panel the case when custom_theme=None
git-svn-id: http://trac-hacks.org/svn@13520 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/themeengineplugin/trunk/themeengine/templates/admin_theme_custom.html
+++ b/themeengineplugin/trunk/themeengine/templates/admin_theme_custom.html
@@ -16,7 +16,7 @@
     <script type="text/javascript">
       $(function() {
         var theme_colors = {};
-        <py:for each="color in current_theme.get('colors',())">
+        <py:for each="color in (current_theme or {}).get('colors',())">
         theme_colors['${color[0]}'] = {
           name: '${color[0]}',
           prop: '${color[1]}',
