--- a/quietplugin/0.12/quiet/htdocs/quiet.css
+++ b/quietplugin/0.12/quiet/htdocs/quiet.css
@@ -1,6 +1,3 @@
 body.quiet {
-	background-image: url("quiet.png");
-	background-repeat: repeat-y;
-	background-position: center;
-	background-color: #C2C2A3;
+ background: #C2C2A3 url("quiet.png") repeat-y center;
 }
